Fix align left class.

--- a/css/collections.css
+++ b/css/collections.css
@@ -9,3 +9,7 @@
 .collection-heading {
   margin: 30px 0;
 }
+
+.align-left {
+  text-align: left;
+}
