--- a/css/global.css
+++ b/css/global.css
@@ -46,6 +46,3 @@ input[type="button"].button-primary:focus {
   border-color: #2980b9;
 }
 
-.align-left {
-  text-align: left;
-}
